<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/mainactivity" 
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_mainactivity_ek1"

				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<View   android:id="@+id/_bg__mainactivity_ek2"
					android:background="@drawable/_bg__mainactivity_ek2_shape"

					android:layout_width="match_parent"
					android:layout_height="844dp" />

				<View
					android:id="@+id/rectangle_1"
					android:layout_width="match_parent"
					android:layout_height="607dp"
					android:layout_marginStart="0dp"
					android:background="@drawable/rectangle_1_shape" />

				<TextView android:id="@+id/attendify"
					android:textStyle="bold"
					android:textSize="50sp"
					android:textColor="@color/_bg__mainactivity_ek2_color"
					android:layout_marginLeft="55dp"
					android:layout_marginTop="310dp"
					android:layout_width="315dp"
					android:layout_height="76dp"
					android:text="@string/attendify_string"
					 />

				<TextView android:id="@+id/in_out_tracker"
					android:textSize="25sp"
					android:textColor="@color/_bg__mainactivity_ek2_color"
					android:layout_marginLeft="104dp"
					android:layout_marginTop="383dp"
					android:layout_width="203.5dp"
					android:layout_height="37.5dp"
					android:text="@string/in_out_tracker_string"
					 />

				<ImageView android:id="@+id/icons8_biometric_64_2__1"
					android:src="@drawable/icons8_biometric_64_2__1"
					android:contentDescription="icons8_biometric_64_2__1"
					 android:layout_marginStart="97dp"
					android:layout_marginTop="161dp"
					android:layout_width="197dp"
					android:layout_height="165dp" />


				<RelativeLayout android:id="@+id/frame_1"
					android:layout_marginTop="475dp"
					android:layout_marginStart="17dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__frame_1_ek1"
						android:background="@drawable/_bg__frame_1_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="363dp"
						android:layout_height="355dp" />

					<View   android:id="@+id/rectangle_2"
						android:background="@drawable/rectangle_2_shape"
						 android:layout_marginStart="10dp"
						android:layout_marginTop="33dp"
						android:layout_width="336dp"
						android:layout_height="289dp" />

					<ImageView android:id="@+id/icons8_admin_80_1"
						android:src="@drawable/icons8_admin_80_1"
						android:contentDescription="icons8_admin_80_1"
						 android:layout_marginStart="277dp"
						android:layout_marginTop="44dp"
						android:layout_width="52dp"
						android:layout_height="53dp" />


					<RelativeLayout android:id="@+id/frame_2"
						android:layout_marginTop="132dp"
						android:layout_marginStart="39dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__frame_2_ek1"
							android:background="@drawable/_bg__frame_2_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="290dp"
							android:layout_height="73dp" />

						<View   android:id="@+id/rectangle_3"
							android:background="@drawable/rectangle_3_shape"
							 android:layout_marginStart="7dp"
							android:layout_marginTop="17dp"
							android:layout_width="272dp"
							android:layout_height="42dp" />

						<TextView android:id="@+id/verify"
							android:textStyle="bold"
							android:textSize="25sp"
							android:textColor="@color/rectangle_2_color"
							android:layout_marginLeft="108dp"
							android:layout_marginTop="23dp"
							android:layout_width="94.5dp"
							android:layout_height="37.5dp"
							android:text="@string/verify_string"
							 />

					</RelativeLayout>

					<TextView android:id="@+id/register_now"
						android:textStyle="bold"
						android:textSize="12sp"
						android:textColor="@color/register_now_color"
						android:layout_marginLeft="198dp"
						android:layout_marginTop="205dp"
						android:layout_width="91.2dp"
						android:layout_height="18.2dp"
						android:text="@string/register_now_string"
						 />

					<TextView android:id="@+id/not_registered_yet_"
						android:textStyle="bold"
						android:textSize="12sp"
						android:textColor="@color/_bg__frame_1_ek1_color"
						android:layout_marginLeft="68dp"
						android:layout_marginTop="205dp"
						android:layout_width="128.2dp"
						android:layout_height="18.2dp"
						android:text="@string/not_registered_yet__string"
						 />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>